Fixed people bar spacing

--- a/private/styl/play.styl
+++ b/private/styl/play.styl
@@ -119,10 +119,8 @@ body
       width 100px
       height 100px
       display inline-block
-      margin 0 10px
+      margin 0 40px
       .slideArea
-        margin-left -148px
-        width 400px
         z-index -1
         transition bottom 0.4s linear
         position absolute
